# ustb_19th_smartcar

./: .gitignore  Dockerfile  README.md  run_docker.sh  几个教程.md
.gazebo/models/18th_pickup_point/: model.config  model.sdf
.gazebo/models/18th_ros_start/: model.config  model.sdf
.gazebo/models/19TH_ROS_RACE/: 19th_second.stl  model.config  model.sdf
.gazebo/models/19th_A/: model.config  model.sdf
.gazebo/models/19th_B/: model.config  model.sdf
.gazebo/models/19th_C/: model.config  model.sdf
.gazebo/models/19th_QR_position1/: model.config  model.sdf
.gazebo/models/19th_QR_position3/: model.config  model.sdf
.gazebo/models/19th_pickup_point/: model.config  model.sdf
.gazebo/models/19th_ros_first_world/: 19th_ustb_ros_smartcar_map.stl  model.config  model.sdf
.gazebo/models/19th_ros_start/: model.config  model.sdf
.gazebo/models/19th_second_wall/: model.config  model.sdf
.gazebo/models/19th_start_points/: model.config  model.sdf
.gazebo/models/A_dessert_B_fruit_C_vegetable_board/: model.config  model.sdf
.gazebo/models/A_dessert_B_fruit_D_vegetable_board/: model.config  model.sdf
.gazebo/models/A_dessert_B_vegetable_C_fruit_board/: model.config  model.sdf
.gazebo/models/A_dessert_B_vegetable_D_fruit_board/: model.config  model.sdf
.gazebo/models/A_dessert_C_fruit_D_vegetable_board/: model.config  model.sdf
.gazebo/models/A_dessert_C_vegetable_D_fruit_board/: model.config  model.sdf
.gazebo/models/A_fruit_B_dessert_C_vegetable_board/: model.config  model.sdf
.gazebo/models/A_fruit_B_dessert_D_vegetable_board/: model.config  model.sdf
.gazebo/models/A_fruit_B_vegetable_C_dessert_board/: model.config  model.sdf
.gazebo/models/A_fruit_B_vegetable_D_dessert_board/: model.config  model.sdf
.gazebo/models/A_fruit_C_dessert_D_vegetable_board/: model.config  model.sdf
.gazebo/models/BarrierPlate/: model.config  (+1 more)
cartographer_ros/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/qr/: CMakeLists.txt
catkin_ws/src/qr/launch/: qr.launch
catkin_ws/src/qr/scripts/: qr.py
src/con_task/: package.xml
src/final_task/: package.xml
src/image_task/: CMakeLists.txt  package.xml
src/image_task/launch/: img.launch
src/ucar_accumtimer/: Result.md
src/ucar_commander/: CMakeLists.txt  README.md  package.xml
(+205 files in other folders)
